# TURZX

./: .gitignore  DEVLOG.md  LINUX_SETUP.md  README.md  pyproject.toml  run_turzx.sh  run_turzx_settings.sh
assets/videos/: README.md
turzx/: __init__.py  __main__.py  autostart.py  config.py  daemon.py  device.py  i18n.py  images.py  modes.py  protocol.py  renderer.py  transitions.py  tray.py
turzx/sensors/: __init__.py  base.py  cpu.py  disk.py  foreground.py  fps.py  gpu.py  memory.py  network.py  system.py  units.py
turzx/ui/: __init__.py  editor.py  main_window.py  preview.py
