[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "turzx"
version = "1.0.0"
description = "Dashboard and driver for the TURZX 2.8\" USB screen"
requires-python = ">=3.10"
dependencies = [
    # USB & protocol
    "pyusb>=1.2.1",
    "pycryptodome>=3.20",
    "Pillow>=10.0",
    # Sensors
    "psutil>=5.9",
    # UI
    "PySide6>=6.5",
]

[project.optional-dependencies]
gpu = [
    "pynvml>=11.0",      # NVIDIA GPU sensors
]
dev = [
    "ipython",
    "pynvml>=11.0",
]
video = [
    "opencv-python>=4.5",  # Video background support
]

[project.scripts]
turzx = "turzx.daemon:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["turzx*"]

# ── Platform setup notes ──
#
# Windows:
#   pip install -e ".[gpu]"
#   (libusb DLL bundled via pip install libusb)
#
# Arch Linux:
#   pacman -S libusb python-pyusb python-pillow python-pycryptodome python-psutil pyside6
#   pip install -e ".[gpu]"
#
#   Udev rule (no sudo for USB):
#     echo 'SUBSYSTEM=="usb", ATTR{idVendor}=="1cbe", ATTR{idProduct}=="0028", MODE="0666"' \
#       | sudo tee /etc/udev/rules.d/99-turzx.rules
#     sudo udevadm control --reload-rules && sudo udevadm trigger
